--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
+    "module": "nodenext",
+    "target": "esnext",
     "rootDir": "./src",
     "outDir": "./dist",
     "declaration": true,
