--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TypeScript-based HR API loader library.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "build": "npx tsc",
     "clean": "rm -rf dist",
