--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,15 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
+    "module": "CommonJS",
+    "declaration": true,
+    "rootDir": "./src",
     "outDir": "./dist",
     "strict": true,
-    "skipLibCheck": true,
-    "rootDir": "./src",
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
-    "isolatedModules": true,
-    "noUncheckedSideEffectImports": true,
-    "types": [
-      "node"
-    ],
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
   "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules"
+    "src"
   ]
 }
